--- a/style.css
+++ b/style.css
@@ -13,6 +13,13 @@ body {
 	display: flex;
 	flex-direction: column;
 }
+
+header,
+main,
+footer {
+	padding: 1rem;
+}
+
 header {
 	background-color: white;
 }
@@ -30,37 +37,66 @@ main > #grid > .bookCard {
 	background-color: lightseagreen;
 	padding: 1rem;
 	margin: 1rem 0;
-	transition: 1s ease;
 }
 
-main > #bookModal {
+main > .modalOverlay {
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	transform: scale(0);
+	transition: 0.4s ease;
+}
+
+main > .modalOverlay.show {
+	/* z-index: 2; */
+	transform: scale(1);
+}
+
+main > .modalOverlay > #bookModal {
 	background-color: red;
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
 	padding: 1rem;
-	display: none;
+	width: 100%;
+	max-width: 320px;
+	height: min-content;
 }
-main > #bookModal > #bookForm {
+
+main > .modalOverlay > #bookModal > #bookForm {
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
 }
 
-main > #bookModal > #bookForm > .status {
+main > .modalOverlay > #bookModal > #bookForm > .status {
 	display: flex;
 }
 
-main > #bookModal.show {
-	display: flex;
+main > .pageOverlay {
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	-webkit-backdrop-filter: blur(3px);
+	backdrop-filter: blur(3px);
+	background-color: hsla(0, 0%, 0%, 0.1);
+	transition: 0.4s ease;
+	opacity: 0;
+	visibility: hidden;
+}
+
+main > .pageOverlay.show {
+	opacity: 1;
+	visibility: visible;
 }
 
 footer {
 	background-color: hsl(0, 0%, 90%);
-}
-
-header,
-main,
-footer {
-	padding: 1rem;
 }
