--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+:root {
+	--bcg: hsl(0, 0%, 95%);
+	--grey85: hsl(0, 0%, 85%);
+	--blue: #7dd3fc;
+	--green: #86efac;
+	--yellow: #fde047;
+	--red: #fca5a5;
+
+	--border: 8px;
+	--shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+}
+
 html,
 body {
 	height: 100%;
@@ -9,37 +21,115 @@ html {
 
 body {
 	margin: 0;
-	background-color: hsl(0, 0%, 95%);
+	background-color: var(--bcg);
 	display: flex;
 	flex-direction: column;
+
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 400;
 }
 
-header,
-main,
-footer {
-	padding: 1rem;
+.container {
+	max-width: 1280px;
+	margin: 0 auto;
 }
 
 header {
 	background-color: white;
+	box-shadow: var(--shadow);
+}
+
+header .container {
+	padding: 0 1rem;
+}
+
+header h1 {
+	font-size: 250%;
+	font-weight: 700;
 }
 
 main {
 	flex-basis: 100%;
 }
 
-main > button#addBtn,
-main > button#addExampleBtn {
-	font-size: 125%;
-}
-
-main > #grid > div.bookCard {
-	background-color: lightseagreen;
+main .container {
 	padding: 1rem;
-	margin: 1rem 0;
 }
 
-main > .modalOverlay {
+.addButtons {
+	display: flex;
+	justify-content: center;
+	padding: 1rem 0;
+	gap: 1rem;
+}
+
+button {
+	border: none;
+	border-radius: var(--border);
+	font-family: inherit;
+	font-size: inherit;
+	transition: 0.4s ease;
+	padding: 1rem;
+	color: black;
+	font-weight: 600;
+	font-size: 100%;
+}
+
+button:hover {
+	cursor: pointer;
+}
+
+#addBtn,
+#addExampleBtn {
+	font-size: 125%;
+	background-color: var(--grey85);
+}
+
+#addBtn:hover,
+#addExampleBtn:hover {
+	background-color: var(--blue);
+}
+
+#grid {
+	padding: 1rem 0;
+	display: grid;
+	gap: 1rem;
+	grid-template-columns: repeat(auto-fill, minmax(256px, 1fr));
+}
+
+.bookCard {
+	background-color: white;
+	padding: 1rem;
+	border-radius: var(--border);
+	box-shadow: var(--shadow);
+
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+}
+
+.readBtn,
+.removeBtn {
+	background-color: var(--bcg);
+	width: 100%;
+}
+
+.readBtn {
+	background-color: var(--green);
+	/* background-color: var(--yellow); */
+}
+
+.readBtn:hover {
+	/* background-color: var(--green); */
+	background-color: var(--yellow);
+}
+
+.removeBtn:hover {
+	background-color: var(--red);
+}
+
+/* ---------------------------------------------------------- */
+#modalOverlay {
 	position: absolute;
 	left: 0;
 	right: 0;
@@ -52,32 +142,36 @@ main > .modalOverlay {
 	transition: 0.4s ease;
 }
 
-main > .modalOverlay.show {
+#modalOverlay.show {
 	transform: scale(1);
 }
 
-main > .modalOverlay > #bookModal {
-	background-color: red;
+#bookModal {
+	background-color: var(--bcg);
+
+	border-radius: var(--border);
+	border: solid 1px black;
+
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
 	padding: 1rem;
 	width: 100%;
-	max-width: 320px;
-	height: min-content;
+	max-width: 256px;
+	height: 256px;
 }
 
-main > .modalOverlay > #bookModal > #bookForm {
+#bookForm {
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
 }
 
-main > .modalOverlay > #bookModal > #bookForm > .status {
-	display: flex;
+.status {
+	/* display: flex; */
 }
 
-main > .pageOverlay {
+#pageOverlay {
 	position: absolute;
 	left: 0;
 	right: 0;
@@ -91,14 +185,51 @@ main > .pageOverlay {
 	visibility: hidden;
 }
 
-main > .pageOverlay.show {
+#pageOverlay.show {
 	opacity: 1;
 	visibility: visible;
 }
 
+/* -------------------------------------------------- */
+
 footer {
-	background-color: hsl(0, 0%, 90%);
+	display: flex;
+	justify-content: center;
 }
+
+footer .container {
+	padding: 0 1rem;
+}
+
+footer p {
+	display: flex;
+	flex-wrap: wrap;
+	font-size: 0.875rem;
+}
+
+footer p span {
+	display: flex;
+	align-items: center;
+	height: 2.125rem;
+	white-space: nowrap;
+}
+
+footer p .emoji {
+	font-size: 1.625rem;
+}
+
+.fa-github {
+	color: black;
+	opacity: 75%;
+	transition: transform 0.3s ease-in-out;
+}
+
+.fa-github:hover {
+	opacity: 100%;
+	transform: rotate(360deg) scale(1.2);
+}
+
+/* -------------------------------------------------- */
 
 /* .bookCard {
 	height: 100px;
