--- a/style.css
+++ b/style.css
@@ -59,6 +59,12 @@ main {
 
 main .container {
 	padding: 1rem;
+
+	/* display: flex;
+	flex-direction: column;
+	flex-basis: 100%;
+
+	height: 100%;  */
 }
 
 .addButtons {
@@ -92,10 +98,14 @@ button:hover {
 }
 
 #grid {
+	display: none;
 	padding: 1rem 0;
-	display: grid;
 	gap: 1rem;
 	grid-template-columns: repeat(auto-fill, minmax(288px, 1fr));
+}
+
+#grid.show {
+	display: grid;
 }
 
 .bookCard {
@@ -107,6 +117,15 @@ button:hover {
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
+}
+
+.bookCard p {
+	margin: 0.5rem 0;
+	text-align: center;
+}
+
+.bookCard p.title {
+	font-weight: 600;
 }
 
 .readBtn,
@@ -127,6 +146,20 @@ button:hover {
 
 .removeBtn:hover {
 	background-color: var(--lightred);
+}
+
+#empty {
+	display: none;
+}
+
+#empty.show {
+	display: flex;
+	justify-content: center;
+	font-size: 200%;
+	font-weight: 200;
+	text-align: center;
+	padding: 2rem 0;
+	opacity: 0.5;
 }
 
 #pageOverlay {
@@ -232,6 +265,7 @@ footer .container {
 
 footer p {
 	display: flex;
+	justify-content: center;
 	flex-wrap: wrap;
 	font-size: 0.875rem;
 }
