--- a/style.css
+++ b/style.css
@@ -1,18 +1,17 @@
 :root {
 	--bcg: hsl(0, 0%, 95%);
 	--grey85: hsl(0, 0%, 85%);
-	--blue: #38bdf8;
-	--green: #4ade80;
-	--yellow: #facc15;
-	--red: #f87171;
-
 	--lightblue: #7dd3fc;
 	--lightgreen: #86efac;
 	--lightyellow: #fde047;
 	--lightred: #fca5a5;
-
+	--blue: #38bdf8;
+	--green: #4ade80;
+	--yellow: #facc15;
 	--border: 8px;
 	--shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+	--fast: 0.2s;
+	--slow: 0.4s;
 }
 
 html,
@@ -69,9 +68,10 @@ main .container {
 }
 
 button {
+	color: black;
 	border: none;
 	border-radius: var(--border);
-	transition: 0.4s ease;
+	transition: background-color var(--slow) ease;
 	padding: 1rem;
 	font-weight: 600;
 }
@@ -123,7 +123,7 @@ button:hover {
 }
 
 .bookCard.fadeIn {
-	transition: 0.2s ease;
+	transition: transform var(--fast) ease;
 	transform: scale(0);
 }
 
@@ -132,7 +132,7 @@ button:hover {
 }
 
 .bookCard.fadeOut {
-	transition: 0.2s ease;
+	transition: transform var(--fast) ease;
 	transform: scale(0);
 }
 
@@ -142,25 +142,30 @@ button:hover {
 	width: 100%;
 }
 
-.readBtn {
-	background-color: var(--lightgreen);
-	/* background-color: var(--lightyellow); */
-}
-
-.readBtn:hover {
-	background-color: var(--green);
-	/* background-color: var(--yellow); */
-}
-
 .removeBtn:hover {
 	background-color: var(--lightred);
+}
+
+.read {
+	background-color: var(--lightgreen);
+}
+
+.notReadYet {
+	background-color: var(--lightyellow);
+}
+
+.read:hover {
+	background-color: var(--green);
+}
+.notReadYet:hover {
+	background-color: var(--yellow);
 }
 
 #empty {
 	position: absolute;
 	opacity: 0;
 	z-index: -1;
-	transition: opacity 0.4s ease;
+	transition: opacity var(--slow) ease;
 	left: 1rem;
 	right: 1rem;
 	top: 14rem;
@@ -188,7 +193,7 @@ button:hover {
 	-webkit-backdrop-filter: blur(3px);
 	backdrop-filter: blur(3px);
 	background-color: hsla(0, 0%, 0%, 0.5);
-	transition: 0.4s ease;
+	transition: opacity var(--slow) ease;
 	opacity: 0;
 	visibility: hidden;
 }
@@ -209,7 +214,7 @@ button:hover {
 	justify-content: center;
 	align-items: center;
 	transform: scale(0);
-	transition: 0.4s ease;
+	transition: transform var(--slow) ease;
 }
 
 #modalOverlay.show {
@@ -267,7 +272,11 @@ input {
 input.checkbox {
 	width: 1rem;
 	height: 1rem;
-	accent-color: white;
+	accent-color: var(--lightgreen);
+}
+
+input.checkbox:hover {
+	accent-color: var(--green);
 }
 
 footer {
